--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
       </section>
 
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака стоит на стоге сена">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Туман в лесу">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду озера">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег моря и горы">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Заснеженные верхушки гор">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Знак переходного перехода и бетонные конусы">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Горы в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Поле и гора на заднем плане">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег и горы">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Лес и горы в тумане">
       </section>
 
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="">
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Каменистый берег">
           <div class="place__website">
             <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="">park-kosa.ru</a>
+            <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -79,10 +79,10 @@
 
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img class="place__image" src="./images/place-kolsky.jpg" alt="">
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="Заснеженная гора">
           <div class="place__website">
             <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="">National Geographic</a>
+            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -93,10 +93,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img class="place__image" src="./images/place-altai.jpg" alt="">
+          <img class="place__image" src="./images/place-altai.jpg" alt="Ноутбук на столе перед окном за котором лес">
           <div class="place__website">
             <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="">YouTube</a>
+            <a class="place__website_link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -106,10 +106,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="">
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед на озере Байкал">
           <div class="place__website">
             <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="">https://vk.com/baikalmile</a>
+            <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -120,10 +120,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img class="place__image" src="./images/place-karelia.jpg" alt="">
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Красивая река и лес">
           <div class="place__website">
             <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="">http://vodlozero.ru/</a>
+            <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -134,8 +134,11 @@
       </section>
 
       <section class="cover">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <h2 class="cover__title">До Байкала<br> «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
+
       </section>
     </main>
 
@@ -143,13 +146,13 @@
 
     <footer class="footer">
       <ul class="footer__links">
-        <li><a class="footer__link" href="">Карты</a></li>
-        <li><a class="footer__link" href="">Погода</a></li>
-        <li><a class="footer__link" href="">Расписание</a></li>
-        <li><a class="footer__link" href="">Календарь</a></li>
-        <li><a class="footer__link" href="">Путешествия</a></li>
+        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
       </ul>
-      <p class="footer__copyright">© 2020. Ляшенко Максим</p>
+      <p class="footer__copyright">© 2023. Ляшенко Максим</p>
     </footer>
   </div>
 </body>
