Подправил ошибки валидации

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ul>
       </section>
 
-      <section class="photo-grid">
+      <div class="photo-grid">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы">
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака стоит на стоге сена">
@@ -61,7 +61,7 @@
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Поле и гора на заднем плане">
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег и горы">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Лес и горы в тумане">
-      </section>
+      </div>
 
       <section class="places">
         <div class="place">
