--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span class="intro__list_number">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></li>
-          <li>Природных заповедников <span class="intro__list_number">105</span></li>
-          <li>Аэропортов <span class="intro__list_number">241</span></li>
+          <li>Часовых поясов <span class="intro__span-number">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-number">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-number">16</span></li>
+          <li>Природных заповедников <span class="intro__span-number">105</span></li>
+          <li>Аэропортов <span class="intro__span-number">241</span></li>
         </ul>
       </section>
 
@@ -68,8 +68,8 @@
           <h2 class="place__title">Куршская коса</h2>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Каменистый берег">
           <div class="place__website">
-            <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <p class="place__website-text">URL</p>
+            <a class="place__website-link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -81,8 +81,8 @@
           <h2 class="place__title">Кольский</h2>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Заснеженная гора">
           <div class="place__website">
-            <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <p class="place__website-text">URL</p>
+            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -95,8 +95,8 @@
           <h2 class="place__title">Алтай</h2>
           <img class="place__image" src="./images/place-altai.jpg" alt="Ноутбук на столе перед окном за котором лес">
           <div class="place__website">
-            <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+            <p class="place__website-text">URL</p>
+            <a class="place__website-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -108,8 +108,8 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед на озере Байкал">
           <div class="place__website">
-            <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <p class="place__website-text">URL</p>
+            <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -122,8 +122,8 @@
           <h2 class="place__title">Карелия</h2>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Красивая река и лес">
           <div class="place__website">
-            <p class="place__website_text">URL</p>
-            <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <p class="place__website-text">URL</p>
+            <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
