--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <img class="logo" src="./images/header-logo.svg" alt="Логотип проекта">
       <ul class="header__lang-links">
         <li>
-          <a class="header__lang-link header__lang-link_lang_ru" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         </li>
         <li>
-          <a class="header__lang-link header__lang-link_lang_en" href="#">En</a>
+          <a class="header__lang-link" href="#">En</a>
         </li>
       </ul>
     </header>
@@ -48,7 +48,7 @@
         </ul>
       </section>
 
-      <div class="photo-grid">
+      <section class="photo-grid" aria-label="Блок с фотографиями">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы">
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака стоит на стоге сена">
@@ -61,15 +61,15 @@
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Поле и гора на заднем плане">
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег и горы">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Лес и горы в тумане">
-      </div>
+      </section>
 
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Каменистый берег">
           <div class="place__website">
-            <p class="place__website-text">URL</p>
-            <a class="place__website-link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <p class="place__website-text">url</p>
+            <a class="place__website-link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -81,8 +81,8 @@
           <h2 class="place__title">Кольский</h2>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Заснеженная гора">
           <div class="place__website">
-            <p class="place__website-text">URL</p>
-            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <p class="place__website-text">url</p>
+            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -95,8 +95,8 @@
           <h2 class="place__title">Алтай</h2>
           <img class="place__image" src="./images/place-altai.jpg" alt="Ноутбук на столе перед окном за котором лес">
           <div class="place__website">
-            <p class="place__website-text">URL</p>
-            <a class="place__website-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+            <p class="place__website-text">url</p>
+            <a class="place__website-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -108,8 +108,8 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед на озере Байкал">
           <div class="place__website">
-            <p class="place__website-text">URL</p>
-            <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <p class="place__website-text">url</p>
+            <a class="place__website-link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -122,8 +122,8 @@
           <h2 class="place__title">Карелия</h2>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Красивая река и лес">
           <div class="place__website">
-            <p class="place__website-text">URL</p>
-            <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <p class="place__website-text">url</p>
+            <a class="place__website-link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <div class="place__text">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -134,8 +134,8 @@
       </section>
 
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
 
@@ -145,13 +145,15 @@
 <!-- FOOTER -->
 
     <footer class="footer">
-      <ul class="footer__links">
-        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-      </ul>
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        </ul>        
+      </nav>
       <p class="footer__copyright">© 2023. Ляшенко Максим</p>
     </footer>
   </div>
